# kuibit

./: NEWS.md  README.md  paper.md  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.rst
example_bins/: README.md  plot_1d_vars.py  plot_ah_trajectories.py  plot_grid.py  plot_grid_var.py  plot_scalar.py
examples/: README.md  plot_1d_vars.py  plot_ah_separation.py  plot_ah_trajectories.py  plot_constraints.py  plot_grid_var.py  plot_gw_energy.py  plot_physical_time_per_hour.py  plot_psi4.py  plot_scalar.py  print_available_timeseries.py
kuibit/: argparse_helper.py  grid_data.py  visualize.py  visualize_matplotlib.py
mopi_movies/: grid_var
postcactus/: argparse_helper.py  gw_mismatch.py  visualize.py
tests/: test_argparse_helper.py  test_visualize.py  test_visualize_matplotlib.py
