[tool.poetry]
name = "kuibit"
version = "1.1.0-dev2"
description = "Read and analyze Einstein Toolkit simulations."
authors = ["Gabriele Bozzola <gabrielebozzola@arizona.edu>"]
maintainers = ["Gabriele Bozzola <gabrielebozzola@arizona.edu>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/sbozzolo/kuibit"
repository = "https://github.com/sbozzolo/kuibit"
documentation = "https://sbozzolo.github.io/kuibit"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sbozzolo/kuibit/issues"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.5"
scipy = "^1.5.2"
h5py = "^2.10.0"
matplotlib = ">=2.0.0"
ConfigArgParse = "^1.2.3"
motionpicture = { git = "https://github.com/Sbozzolo/motionpicture.git", optional = true }
numba = { version = "^0.51.2", optional = true }
lalsuite = { version = "^6.77", optional = true }
pycbc = { version = "^1.16.10", optional = true }
tikzplotlib =  { version = "^0.8.0", optional = true }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = "^5.3"
Sphinx = "^3.2.1"
nbsphinx = "^0.7.1"
jupyter = "^1.0.0"
mayavi = "^4.7.2"

[tool.poetry.extras]
full = ["numba", "lalsuite", "pycbc", "tikzplotlib", "motionpicture"]
with_pycbc = ["lalsuite", "pycbc"]
with_numba = ["numba"]
with_tikz = ["tikzplotlib"]

[tool.black]
line-length = 79
exclude = '''
/(
    \.git
  | docs
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

